docs - replace incorrect refs to PXF_HOME with PXF_CONF (#8663)

--- a/docs/content/jdbc_cfg.html.md.erb
+++ b/docs/content/jdbc_cfg.html.md.erb
@@ -267,7 +267,7 @@ In this procedure, you name and add a PXF JDBC server configuration for a Postgr
 
     **Note**: The server name `default` is reserved.
 
-3. Create the `$PXF_HOME/servers/<server_name>` directory. For example, use the following command to create a JDBC server configuration named `pg_user1_testdb`:
+3. Create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a JDBC server configuration named `pg_user1_testdb`:
 
     ``` shell
     gpadmin@gpmaster$ mkdir $PXF_CONF/servers/pg_user1_testdb
@@ -366,7 +366,7 @@ Perform the following procedure to configure a PXF JDBC server for Hive:
 
 2. Choose a name for the JDBC server.
 
-3. Create the `$PXF_HOME/servers/<server_name>` directory. For example, use the following command to create a JDBC server configuration named `hivejdbc1`:
+3. Create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a JDBC server configuration named `hivejdbc1`:
 
     ``` shell
     gpadmin@gpmaster$ mkdir $PXF_CONF/servers/hivejdbc1
