--- a/docs/content/objstore_cfg.html.md.erb
+++ b/docs/content/objstore_cfg.html.md.erb
@@ -61,7 +61,7 @@ In this procedure, you name and add a PXF server configuration in the `$PXF_CONF
 
 2. Choose a name for the server. You will provide the name to end users that need to reference files in the object store.
 
-3. Create the `$PXF_HOME/servers/<server_name>` directory. For example, use the following command to create a server configuration for a Google Cloud Storage server named `gs_public`:
+3. Create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a server configuration for a Google Cloud Storage server named `gs_public`:
 
     ``` shell
     gpadmin@gpmaster$ mkdir $PXF_CONF/servers/gs_public
