--- a/docs/content/s3_objstore_cfg.html.md.erb
+++ b/docs/content/s3_objstore_cfg.html.md.erb
@@ -155,7 +155,7 @@ In this procedure, you name and add a PXF server configuration in the `$PXF_CONF
 
 2. Choose a name for the server. You will provide the name to end users that need to reference files in the object store.
 
-3. Create the `$PXF_HOME/servers/<server_name>` directory. For example, use the following command to create a server configuration for an S3 server named `s3_user1cfg`:
+3. Create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a server configuration for an S3 server named `s3_user1cfg`:
 
     ``` shell
     gpadmin@gpmaster$ mkdir $PXF_CONF/servers/s3_user1cfg
