--- a/docs/content/intro_pxf.html.md.erb
+++ b/docs/content/intro_pxf.html.md.erb
@@ -8,11 +8,14 @@ You can query the external table via Greenplum Database, leaving the referenced 
 
 ## <a id="suppplat"></a> Supported Platforms
 
-PXF bundles all of the JAR files on which it depends, including the following Hadoop libraries:
+PXF bundles all of the Hadoop JAR files on which it depends, and supports the following Hadoop component versions:
 
-- Hadoop version 2.9.2
-- Hive version 1.2.2
-- HBase version 1.3.2
+| PXF Version | Hadoop Version | Hive Server Version | HBase Server Version |
+|-------------|----------------|---------------------|-------------|
+| 5.9.1 | 2.x, 3.1+ | 1.x, 2.x, 3.1+ | 1.3.2 |
+| 5.9.0 | 2.x, 3.1+ | 1.x, 2.x, 3.1+ | 1.3.2 |
+| 5.8.2 | 2.x | 1.x | 1.3.2 |
+| 5.8.1 | 2.x | 1.x | 1.3.2 |
 
 ## <a id="arch"></a> Architectural Overview
 
