Fix incorrect spelling in docs/comments
This fixes multiple occurrences of duplicated words in sentences, like
"the the" and "is is" etc.

Reviewed-by: Mel Kiyama <mkiyama@pivotal.io>
Reviewed-by: Heikki Linnakangas <hlinnakangas@pivotal.io>

--- a/docs/content/cfg_server.html.md.erb
+++ b/docs/content/cfg_server.html.md.erb
@@ -94,7 +94,7 @@ PXF includes a template file named `pxf-site.xml`. You use the `pxf-site.xml` te
 You configure properties in the `pxf-site.xml` file for a PXF server when one or more of the following conditions hold:
 
 - The remote Hadoop system utilizes Kerberos authentication.
-- You want to enable/disable user impersonation on the the remote Hadoop or external database system.
+- You want to enable/disable user impersonation on the remote Hadoop or external database system.
 
 `pxf-site.xml` includes the following properties:
 
