--- a/docs/content/hdfs_json.html.md.erb
+++ b/docs/content/hdfs_json.html.md.erb
@@ -115,7 +115,7 @@ The single-JSON-record-per-line data set follows:
 "id":287819058,"location":""}, "coordinates": null}
 ```  
 
-This is the data set for for the multi-line JSON record data set:
+This is the data set for the multi-line JSON record data set:
 
 ``` json
 {
