docs: Fix typos
Reviewed-by: Mel Kiyama <mkiyama@pivotal.io>
Reviewed-by: Heikki Linnakangas <hlinnakangas@pivotal.io>

--- a/docs/content/gphdfs-pxf-migrate.html.md.erb
+++ b/docs/content/gphdfs-pxf-migrate.html.md.erb
@@ -218,7 +218,7 @@ Ensure that you can read from, or write to, each `pxf` external table that you h
 
 ## <a id="remove_gphdfs_ext_table"></a>Removing the gphdfs External Tables
 
-You must remove all `gphdfs` external tables before you can successfuly migrate a Greenplum Database 4 or 5 database to Greenplum 6.
+You must remove all `gphdfs` external tables before you can successfully migrate a Greenplum Database 4 or 5 database to Greenplum 6.
 
 Drop an external table as follows:
 
