--- a/docs/content/jdbc_cfg.html.md.erb
+++ b/docs/content/jdbc_cfg.html.md.erb
@@ -218,7 +218,7 @@ By default, PXF JDBC user impersonation is disabled.  Perform the following proc
     <property>
         <name>pxf.service.user.impersonation</name>
         <value>true</value>
-    </propery>
+    </property>
     ```
 
 7. Save the `jdbc-site.xml` file and exit the editor.
