--- a/docs/content/pxfuserimpers.html.md.erb
+++ b/docs/content/pxfuserimpers.html.md.erb
@@ -96,7 +96,7 @@ PXF user impersonation is enabled by default for Hadoop servers. You can configu
     <property>
         <name>pxf.service.user.impersonation</name>
         <value>true</value>
-    </propery>
+    </property>
     ```
 
 3. If you enabled user impersonation, you must configure Hadoop proxying as described in [Configure Hadoop Proxying](#hadoop). You must also configure [Hive User Impersonation](#hive) and [HBase User Impersonation](#hbase) if you plan to use those services.
