--- a/docs/content/cfginitstart_pxf.html.md.erb
+++ b/docs/content/cfginitstart_pxf.html.md.erb
@@ -27,7 +27,7 @@ PXF provides two management commands:
 - `pxf cluster` - manage all PXF service instances in the Greenplum Database cluster
 - `pxf` - manage the PXF service instance on a specific Greenplum Database host
 
-The [`pxf cluster`](ref/pxf-cluster.html) command supports `init`, `start`, `status`, `stop`, and `sync` subcommands. When you run a `pxf cluster` subcommand on the Greenplum Database master host, you perform the operation on all segment hosts in the Greenplum Database cluster. PXF also runs the `init` and `sync` commands on the standby master host.
+The [`pxf cluster`](ref/pxf-cluster.html) command supports `init`, `start`, `restart`, `status`, `stop`, and `sync` subcommands. When you run a `pxf cluster` subcommand on the Greenplum Database master host, you perform the operation on all segment hosts in the Greenplum Database cluster. PXF also runs the `init` and `sync` commands on the standby master host.
 
 The [`pxf`](ref/pxf.html) command supports `init`, `start`, `stop`, `restart`, and `status` operations. These operations run locally. That is, if you want to start or stop the PXF agent on a specific Greenplum Database segment host, you log in to the host and run the command. 
 
@@ -110,7 +110,7 @@ Perform the following procedure to stop PXF on each segment host in your Greenpl
 
 ## <a id="restart_pxf"></a>Restarting PXF
 
-If you must restart PXF, for example if you updated PXF user configuration files in `$PXF_CONF/conf`, you can stop, and then start, PXF in your Greenplum Database cluster.
+If you must restart PXF, for example if you updated PXF user configuration files in `$PXF_CONF/conf`, you run `pxf cluster restart` to stop, and then start, PXF on all segment hosts in your Greenplum Database cluster.
 
 Only the `gpadmin` user can restart the PXF service.
 
@@ -131,7 +131,6 @@ Perform the following procedure to restart PXF in your Greenplum Database cluste
 2. Restart PXF:
 
     ```shell
-    gpadmin@gpmaster$ $GPHOME/pxf/bin/pxf cluster stop
-    gpadmin@gpmaster$ $GPHOME/pxf/bin/pxf cluster start
+    gpadmin@gpmaster$ $GPHOME/pxf/bin/pxf cluster restart
     ```
 
