--- a/docs/content/upgrade_5_to_6.html.md.erb
+++ b/docs/content/upgrade_5_to_6.html.md.erb
@@ -9,7 +9,7 @@ If you have installed, configured, and are using PXF 5.x in your Greenplum Datab
 The PXF upgrade procedure has three steps. You perform one pre-install procedure, the install itself, and then a post-install procedure to upgrade to PXF 6.x:
 
 -   [Step 1: Perform the PXF Pre-Upgrade Actions](#pxfpre)
--   Step 2: Install PXF 6.x
+-   [Step 2: Install PXF 6.x](#pxfinst)
 -   [Step 3: Complete the Upgrade to PXF 6.x](#pxfup)
 
 
@@ -33,8 +33,11 @@ Perform this procedure before you upgrade to a new version of PXF:
 
 1. Stop PXF on each Greenplum host as described in [Stopping PXF](cfginitstart_pxf.html#stop_pxf).
 
-1. [Install PXF 6.x](installing.html), identify and note the new PXF version number, and then continue your PXF upgrade with [Step 3: Complete the Upgrade to PXF 6.x](#pxfup).
+## <a id="pxfinst"></a>Step 2: Installing PXF 6.x
 
+1. Follow the steps outlined in [Installing PXF 6.x](../release/installing_pxf.html), and identify and note the new PXF version number.
+
+1. Check out the new installation layout in [About the PXF Installation and Configuration Directories](about_pxf_dir.html).
 
 ## <a id="pxfup"></a>Step 3: Completing the Upgrade to PXF 6.x
 
